* new utility: checkVDIF : look at VDIF file and look for issues
* Add support for command line option "--version" to some of the utilities
* Slight improvement in human readable output from printvdiffilesummary, as used by vsum
* vdif file summary (as used by vsum) would under-report length of a scan if file size < 80MB and datarate < 320 Mbps; fixed

Version 1.4
~~~~~~~~~~~
* New helper functions to read VDIF file while pre-arranging data to be more palatable for the memory based vdifmux()
  - vdifreaderOpen(), vdifreaderRead(), vdifreaderSeek()
* New utility: reorderVDIF based upon vdifreaderRead()
* Version for DiFX-2.6, Mar 4, 2019

Version 1.3
~~~~~~~~~~~
* Move all pure Mark6 functionality to mark6sg
* Python utils: explicitly call python2
* More conformant help and version information: printVDIFheader
* vdifmux(): change logic to determine first frame number if not explicitly provided -> simplified and probably faster and possibly more correct code.
* vdifmux(): make more robust in some parameter corner cases
* vdifmux(): nSort is now entirely referring to input frames; previously there was some use regarding output frames
* printVDIFheader: minor update for discerning two EDV Version 2 sub(sub)versions (EHT R2DBE, ALMA)

Version 1.2
~~~~~~~~~~~
* Post DiFX-2.5
* Some improvements in multiplexing very sparse data
* Options in vmux to change gap/sort tuning parameters
* Added ability to summarize a mark6 module in a specific slot
* new corner turners:
  - 1-bit with 32, 64 threads
  - 2-bit with 32, 64 threads
  - 4-bit with 32, 64 threads
  - 8-bit with 32, 64 threads
  - 16-bit with 32, 64 threads
  - 32-bit with 32, 64 threads
  - 64-bit with 32, 64 threads
  - 128-bit with 32, 64 threads
* Mark6Gatherer gets module serial number for mark6 activity message

Version 1.1
~~~~~~~~~~~
* Post DiFX-2.4
* Added incrementVDIFHeader
* Added ctypes-based Python bindings and one example (vdifio_1.py)
* vsum: error message -> stderr, not stdout