@@ -14,6 +14,8 @@ Version 1.5
 * Add support for command line option "--version" to some of the utilities
 * Slight improvement in human readable output from printvdiffilesummary, as used by vsum
 * vdif file summary (as used by vsum) would under-report length of a scan if file size < 80MB and datarate < 320 Mbps; fixed
+* vdifd: correct parsing command line: optional params nbit and offset were swapped
+* vmux: option to force 1-bit input
 
 Version 1.4
 ~~~~~~~~~~~
